app/assets/stylesheets/ecosystems.scss
/* ... */
/* General reusable elements */
.btn-primary {
  background: linear-gradient(180deg, $color-purple 0%, $color-purple-dark 100%);
  color: $color-white;
  &:hover,
  &:active,
  &:focus {
    color: $color-white;
    background: linear-gradient(180deg, $color-purple 0%, $color-purple-dark 33%);
  }
}

.btn-primary--dark {
  background: linear-gradient(180deg, $color-purple-dark 0%, darken($color-purple-dark, 5%) 100%);
}

.btn-secondary {
  background: linear-gradient(180deg, $color-grey-light 0%, $color-grey 100%);
  &:hover,
  &:active,
  &:focus {
    background: linear-gradient(180deg, $color-grey-light 0%, $color-grey 33%);
  }
}

.btn-success {
  background: linear-gradient(180deg, $color-green-dark 0%, $color-green-darker 100%);
  color: $color-white;
  &:hover,
  &:active,
  &:focus {
    color: $color-white;
    background: linear-gradient(180deg, $color-green-dark 0%, $color-green-darker 33%);
  }
}

.btn-danger {
  background: linear-gradient(180deg, $color-orange 0%, $color-orange-dark 100%);
  color: $color-white;
  &:hover,
  &:active,
  &:focus {
    color: $color-white;
    background: linear-gradient(180deg, $color-orange 0%, $color-orange-dark 33%);
  }
}

.btn-warning {
  background: linear-gradient(180deg, $color-orange-light 0%, $color-orange 100%);
  &:hover,
  &:active,
  &:focus {
    background: linear-gradient(180deg, $color-orange-light 0%, $color-orange 33%);

  }
}

.btn-info {
  background: linear-gradient(180deg, $color-grey-light 0%, $color-purple-light 100%);
  &:hover,
  &:active,
  &:focus {
    background: linear-gradient(180deg, $color-grey-light 0%, $color-purple-light 33%);
  }
}

.btn-light {
  background: $color-grey-light;
  &:hover,
  &:active,
  &:focus {
    background: darken($color-grey-light, 3%);
  }
}

.btn-dark {
  background: linear-gradient(180deg, $color-grey-dark 0%, $color-black 100%);
  &:hover,
  &:active,
  &:focus {
    background: linear-gradient(180deg, $color-grey-dark 0%, $color-black 33%);
  }
}

.btn-primary,
.btn-secondary,
.btn-success,
.btn-danger,
.btn-warning,
.btn-info,
.btn-light,
.btn-dark {
  border: 0;
  &:focus {
    outline: 3px solid $color-orange;
  }
}

.btn-primary,
.btn-success,
.btn-danger,
.btn-warning,
.btn-info,
.btn-dark {
  &:active {
    color: rgba($color-white, 0.8) !important;
  }
}

.btn-outline-primary {
  &:hover,
  &:focus {
    color: $color-white;
  }
}

.btn-outline-secondary {
  color: $color-black;
}

.btn-outline-success {
  &:hover,
  &:focus {
    color: $color-white;
  }
}

.btn-outline-info {
  color: $color-black;
}

.btn-outline-warning {
  color: $color-orange;
}

.btn-outline-danger {
  &:hover,
  &:focus {
    color: $color-white;
  }
}

.btn-outline-light {
  color: $color-grey-dark;
}

.alert {
  border: 0;
}

.alert-dark {
  background-color: $color-grey-dark;
  color: $color-white;
	a {
		color: $color-white;
	}
}

hr {
  border-top: 3px solid $color-purple-light;
}

.border-purple-light {
  border-color: $color-purple-light;
}

.container {
  @include media-breakpoint-down(md) {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

.text-decoration-hover {
  text-decoration: none;
  &:hover{
    text-decoration: underline;
  }
}

.dark-section {
  background-color: $color-purple-dark;
  color: $color-white;
  .text-muted {
    color: rgba(255,255,255,0.666) !important;
  }
  a,
  .spesh-link {
    color: $color-white !important;
    &:hover,
    &:active,
    &:focus, 
    &:visited {
      color: $color-white !important;
    }
  }
}

.grey-grad-bg  {
  background: linear-gradient(180deg, $color-white 0%, $color-grey-light 100%);
}

.ecosystems-pattern {
  background-color: lighten($color-purple-light, 8%);
  background-image: asset-url('ecosystems-pattern.svg');
  background-repeat: repeat;
  background-size: calc(696px/2) calc(238px/2);
  background-attachment: fixed;
}

.purple-grad-bg  {
  background-color: $color-purple-dark;
  background: linear-gradient(0deg, $color-purple-dark 0%, $color-purple 50%);
  color: $color-white;
  .text-muted {
    color: rgba(255,255,255,0.666) !important;
  }
}

.grey-bg {
  background-color: $color-grey-light;
}

/* Put an icon next to a link and make the whole lockup clickable */
.link-with-icon {
  display: inline-flex;
  align-items: flex-start;    /* top-align icon and first line of text */
  gap: 0.5em; 
                   
  .link-with-icon__icon {
    flex: 0 0 18px; /* shorthand for flex-grow:0, flex-shrink:0, flex-basis:18px */
    width: 18px;
    height: 18px;
    margin-top: 4px;
  }

  .link-with-icon__text {
    display: block;
    overflow-wrap: break-word; 
    word-break: break-word; 
  }
  &:hover,
  &:active,
  &:focus {
    .link-with-icon__text {
      text-decoration: underline;
      color: $color-purple-dark;
    }
  }
}

body {
  font-optical-sizing: auto;
}

.header__global {
  width: 100%;
}

.header__global__site-logo-wrapper {
  h1 {
    font-size: 0;
    line-height: 0;
    margin: 0;
  }
}

.site-logo {
  font-size: 0;
  line-height: 0;
  color: transparent;

  background-image: asset-url('ecosystems-logo.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  display: inline-block;

  width: 155px;
  height: 30px;
}

.site-logo--white {
	background-image: asset-url('ecosystems-logo-white.svg');
  width: 246px;
  height: 50px;
}

.site-name {
  line-height: 50px;
  display: inline-block;
  vertical-align: middle;
  font-size: 40px;
  font-weight: 400;
  color: $color-purple;
  padding-top: 70px;
}

.header__global__menu-link {
  @include spesh-link();
  @include font-size(1rem);
  .bi {
    display: inline-block;
    transition: transform 0.35s ease-out; //same time as bootstrap's animation
    transform-origin: center;
  }
}

.header__global__menu-link[aria-expanded="true"] {
  .bi {
    transform: rotateX(180deg);
  }
}

.header__global__menu__category {
  margin-bottom: 0.5rem;
}
/* ... */

